--- a/Link Saver Chrome Extension/LP05.html
+++ b/Link Saver Chrome Extension/LP05.html
@@ -4,7 +4,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloock&display=swap" rel="stylesheet">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>URL SAVER's</title>
     <center><h1>Links4u</h1></center>
@@ -13,7 +12,7 @@
     <p id="aler"></p>
     <div class="visually-hidden" id="aa">
     <div class="alert alert-danger d-flex align-items-center " role="alert" id="fit">
-        <img src="UniqueSizzlingFinwhale.webp" visible="false">
+        <img src="Alert-sign.gif" visible="false">
         <div>
             &nbsp;&nbsp;Please Enter URL!!!
         </div>
@@ -23,6 +22,18 @@
     <input id="link"></input>
     <button id="input-btn">Save</button>
     <button id="del-btn">Delete</button>
+    </div>
+    <div class="delbox">                                           <!--BUILDING THE DELETE BUTTON-->
+      <h5>Select The Link To Delete</h5><br>
+      <div class="droplink">             
+        <div class="dropdown">
+          <select name="del-list" value="Select" id="select1">      
+            <option value="ALL" selected>Delete All</option>
+          </select>
+        </div>
+      </div>
+      <button id="del-btn-fin">Delete</button>
+      </div>
     </div>
     <div class="lenl">
     <ol  class="list-group" id="list">
